@@ -4,7 +4,8 @@ PiCenter Changelog
 01/01/2020
 Build 100128
     Disable scatter plot.
-    Add Pearson Correlation service.
+    Added Pearson Correlation service.
+    Sends reboot signal to pis at 2am.
 
 1.0.07
 12/29/2019
